renamed testconfig to test (as we might later add test-infrastructure code to it)

--- a/oasp4j-modules/oasp4j-security/pom.xml
+++ b/oasp4j-modules/oasp4j-security/pom.xml
@@ -67,7 +67,7 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
-      <artifactId>oasp4j-testconfig</artifactId>
+      <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
