--- a/oasp4j-samples/oasp4j-sample-core/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-core/pom.xml
@@ -19,6 +19,11 @@
       <groupId>io.oasp.java.modules</groupId>
       <artifactId>oasp4j-logging</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <dependency>
       <groupId>io.oasp.java.modules</groupId>
