--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -202,7 +202,7 @@
       </dependency>
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
-        <artifactId>oasp4j-testconfig</artifactId>
+        <artifactId>oasp4j-test</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
