#151: cleanup of variables based on port.range

--- a/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
@@ -83,7 +83,7 @@
           <configuration>
             <type>standalone</type>
             <properties>
-              <cargo.servlet.port>${port.range}81</cargo.servlet.port>
+              <cargo.servlet.port>${oasp.http.port}</cargo.servlet.port>
             </properties>
             <configfiles>
               <configfile>
