--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
@@ -12,5 +12,5 @@
 #
 database.user.login = sa
 database.user.password =
-database.url = jdbc:h2:tcp://localhost:${port.range}43/.sample;INIT=create schema if not exists public
+database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/.sample;INIT=create schema if not exists public
 database.migration.auto = true
