#15: as a workaround used redundant java file until begin/end comment block feature has been improved

--- a/oasp4j-templates/oasp4j-template-server/build.xml
+++ b/oasp4j-templates/oasp4j-template-server/build.xml
@@ -55,6 +55,7 @@
 
     <copy todir="${sample.core.sources.output}">
       <fileset dir="${sample.core.sources.input}">
+        <exclude name="**/NamedQueries.java"/>
         <exclude name="*management"/>
         <exclude name="*management/*"/>
         <exclude name="*management/**/*"/>
