--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -11,7 +11,7 @@
   -->
   <groupId>io.oasp.java</groupId>
   <artifactId>oasp4j-bom</artifactId>
-  <version>1.0.0</version>
+  <version>1.1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Dependencies (BOM) of the Open Application Standard Platform for Java (OASP4J) based on spring boot.</description>
