#153: use flyway to manage test data

--- a/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
@@ -10,9 +10,12 @@
 #
 database.hibernate.dialect = org.hibernate.dialect.H2Dialect
 database.datasource = org.h2.jdbcx.JdbcDataSource
-database.hibernate.hbm2ddl.auto = create
+database.hibernate.hbm2ddl.auto = validate
 #database.url = jdbc:h2:~/restaurant-db;INIT=create schema if not exists public
-database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/restaurant-db;INIT=create schema if not exists public
+#database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/restaurant-db;INIT=create schema if not exists public
+database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
+database.migration.auto = true
+database.migration.testdata = true
 
 database.user.login = sa
 database.user.password =
