--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -13,6 +13,7 @@ database.hibernate.show.sql = false
 # Port for internal H2 Database
 database.h2.server.port = ${oasp.db.port}
 database.migration.auto = true
+database.migration.testdata = false
 
 # Activate spring profiles
 #spring.profiles.active = integrationTest
