#45: add property to enable clean db before migration

--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -14,6 +14,7 @@ database.hibernate.show.sql = false
 database.h2.server.port = ${oasp.db.port}
 database.migration.auto = true
 database.migration.testdata = false
+database.migration.clean = false
 
 # Activate spring profiles
 #spring.profiles.active = integrationTest
