--- a/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-server-integration/src/test/resources/config/env/application.properties
@@ -16,6 +16,7 @@ database.hibernate.hbm2ddl.auto = validate
 database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/.sample;INIT=create schema if not exists public
 database.migration.auto = true
 database.migration.testdata = true
+database.migration.clean = true
 
 database.user.login = sa
 database.user.password =
