--- a/oasp4j-bom/pom.xml
+++ b/oasp4j-bom/pom.xml
@@ -92,6 +92,11 @@
         <version>1.0.0.Final</version>
       </dependency>
       <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-envers</artifactId>
+        <version>4.3.5.Final</version>
+      </dependency>
+      <dependency>
         <groupId>cglib</groupId>
         <artifactId>cglib</artifactId>
         <version>3.1</version>
@@ -228,6 +233,11 @@
       <dependency>
         <groupId>io.oasp.java.modules</groupId>
         <artifactId>oasp4j-jpa</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.oasp.java.modules</groupId>
+        <artifactId>oasp4j-jpa-envers</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
