--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
@@ -15,3 +15,5 @@ database.user.password =
 database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/.sample;INIT=create schema if not exists public
 database.migration.auto = true
 database.migration.clean = true
+
+database.hibernate.hbm2ddl.auto = update
