#166: add test for auditing

--- a/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
@@ -14,3 +14,6 @@ database.user.login = sa
 database.user.password =
 database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
 database.migration.auto = true
+database.migration.clean = true
+
+database.hibernate.hbm2ddl.auto = update
