#4: resolved the build problems resulting from introducing a new package for DozerBeanMapper

--- a/oasp4j-modules/oasp4j-beanmapping/pom.xml
+++ b/oasp4j-modules/oasp4j-beanmapping/pom.xml
@@ -27,7 +27,10 @@
       <groupId>ma.glasnost.orika</groupId>
       <artifactId>orika-core</artifactId>
      </dependency>
-
+     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-beans</artifactId>
+     </dependency>
   </dependencies>
 
 </project>
