--- a/oasp4j-templates/oasp4j-template-server/build.xml
+++ b/oasp4j-templates/oasp4j-template-server/build.xml
@@ -59,6 +59,8 @@
         <exclude name="*management"/>
         <exclude name="*management/*"/>
         <exclude name="*management/**/*"/>
+      	<!-- exclude application specific Money class and related classes -->
+      	<exclude name="**/*Money*.java"/>
       </fileset>
       <filterchain>
         <tokenfilter>
@@ -95,44 +97,46 @@
     </copy>
 
   	<copy todir="${sample.core.test.sources.output}">
-  	      <fileset dir="${sample.core.test.sources.input}">
-  	        <exclude name="*management"/>
-  	        <exclude name="*management/*"/>
-  	        <exclude name="*management/**/*"/>
-  	      </fileset>
-  	      <filterchain>
-  	        <tokenfilter>
-  	          <linetokenizer/>
-  	          <!-- Replace packages -->
-  	          <replaceregex pattern="package ${sample.package}" replace="${prefix}package ${package}" flags="g"/>
-  	          <!-- Replace base package -->
-  	          <replaceregex pattern="${sample.package}" replace="${package}" flags="g"/>
-  	          <!-- comment out application specific logic -->
-  	          <replaceregex pattern="${java.begin.pattern}" replace="" flags="g"/>
-  	          <replaceregex pattern="${java.end.pattern}" replace="" flags="g"/>
-  	          <!-- remove lines with references to 'offermanagement' (e.g. imports) -->
-  	          <replaceregex pattern=".*offermanagement.*" replace="" flags="g"/>
-  	        </tokenfilter>
-  	      </filterchain>
-  	    </copy>
+      <fileset dir="${sample.core.test.sources.input}">
+        <exclude name="*management"/>
+        <exclude name="*management/*"/>
+        <exclude name="*management/**/*"/>
+      	<!-- exclude application specific Money class and related classes -->
+      	<exclude name="**/*Money*.java"/>
+      </fileset>
+      <filterchain>
+        <tokenfilter>
+          <linetokenizer/>
+          <!-- Replace packages -->
+          <replaceregex pattern="package ${sample.package}" replace="${prefix}package ${package}" flags="g"/>
+          <!-- Replace base package -->
+          <replaceregex pattern="${sample.package}" replace="${package}" flags="g"/>
+          <!-- comment out application specific logic -->
+          <replaceregex pattern="${java.begin.pattern}" replace="" flags="g"/>
+          <replaceregex pattern="${java.end.pattern}" replace="" flags="g"/>
+          <!-- remove lines with references to 'offermanagement' (e.g. imports) -->
+          <replaceregex pattern=".*offermanagement.*" replace="" flags="g"/>
+        </tokenfilter>
+      </filterchain>
+    </copy>
 
-  	    <copy todir="${sample.core.test.resources.output}">
-  	      <fileset dir="${sample.core.test.resources.input}">
-  	        <exclude name="**/NamedQueries.xml"/>
-  	        <exclude name="db/**/*"/>
-  	      </fileset>
-  	      <filterchain>
-  	        <tokenfilter>
-  	          <linetokenizer/>
-  	          <!-- remove application specific logic -->
-  	          <replaceregex pattern="${xml.begin.pattern}" replace="" flags="g"/>
-  	          <replaceregex pattern="${xml.end.pattern}" replace="" flags="g"/>
-  	          <!-- comment out application specific logic -->
-  	          <replaceregex pattern="&lt;\?xml " replace="${prefix}&lt;?xml " flags="g"/>
-  	          <replaceregex pattern="${sample.package}" replace="${package}" flags="g"/>
-  	        </tokenfilter>
-  	      </filterchain>
-  	    </copy>
+    <copy todir="${sample.core.test.resources.output}">
+      <fileset dir="${sample.core.test.resources.input}">
+        <exclude name="**/NamedQueries.xml"/>
+        <exclude name="db/**/*"/>
+      </fileset>
+      <filterchain>
+        <tokenfilter>
+          <linetokenizer/>
+          <!-- remove application specific logic -->
+          <replaceregex pattern="${xml.begin.pattern}" replace="" flags="g"/>
+          <replaceregex pattern="${xml.end.pattern}" replace="" flags="g"/>
+          <!-- comment out application specific logic -->
+          <replaceregex pattern="&lt;\?xml " replace="${prefix}&lt;?xml " flags="g"/>
+          <replaceregex pattern="${sample.package}" replace="${package}" flags="g"/>
+        </tokenfilter>
+      </filterchain>
+    </copy>
 
     <!-- **** server project **** -->
     <copy file="${sample.server.input}/pom.xml" todir="${sample.server.output}">
