improved documentation/comments for environmental properties...

--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/app/application-default.properties
@@ -1,20 +1,29 @@
 # ---------------------------------------------------------------------------
-# This configuration file contains the properties for development that also
-# act as defaults. They can be overridden for special purposes in application.properties.
+# This configuration file contains the properties with their default values,
+# that are potentially environment specific. As a best practice you should
+# provide production proof settings here that can be used as fallback.
+#
+# These properties can be overridden per environment in the file
+# /config/env/application.properties on your classpath. If you are using
+# Tomcat place this file in the following location:
+# ${CATALINA_BASE}/lib/config/env/application.properties
 # ---------------------------------------------------------------------------
 
 # ---------------------------------------------------------------------------
 # Persistence and database
 # ---------------------------------------------------------------------------
+#database.user.login = ...
+#database.user.password = ...
+#database.url = ...
 database.hibernate.dialect = org.hibernate.dialect.H2Dialect
 database.datasource = org.h2.jdbcx.JdbcDataSource
 database.hibernate.hbm2ddl.auto = validate
 database.hibernate.show.sql = false
-# Port for internal H2 Database
-database.h2.server.port = ${oasp.db.port}
 database.migration.auto = true
 database.migration.testdata = false
 database.migration.clean = false
+# Port for internal H2 Database
+database.h2.server.port = ${oasp.db.port}
 
 # Activate spring profiles
 #spring.profiles.active = integrationTest
