--- a/oasp4j-modules/oasp4j-logging/pom.xml
+++ b/oasp4j-modules/oasp4j-logging/pom.xml
@@ -41,6 +41,12 @@
       <groupId>org.codehaus.janino</groupId>
       <artifactId>janino</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
