--- a/oasp4j-modules/oasp4j-jpa-envers/pom.xml
+++ b/oasp4j-modules/oasp4j-jpa-envers/pom.xml
@@ -23,6 +23,12 @@
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-envers</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
