--- a/oasp4j-modules/oasp4j-jpa/pom.xml
+++ b/oasp4j-modules/oasp4j-jpa/pom.xml
@@ -32,6 +32,12 @@
       <artifactId>hibernate-entitymanager</artifactId>
       <optional>true</optional>
     </dependency>
+    
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
