--- a/oasp4j-modules/oasp4j-rest/pom.xml
+++ b/oasp4j-modules/oasp4j-rest/pom.xml
@@ -55,6 +55,11 @@
       <version>2.4.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
