--- a/oasp4j-modules/oasp4j-web/pom.xml
+++ b/oasp4j-modules/oasp4j-web/pom.xml
@@ -28,6 +28,12 @@
       <groupId>net.sf.m-m-m</groupId>
       <artifactId>mmm-util-core</artifactId>
     </dependency>
+    
+    <dependency>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
