--- a/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
+++ b/oasp4j-samples/oasp4j-sample-server-integration/pom.xml
@@ -35,8 +35,8 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
+      <groupId>io.oasp.java.modules</groupId>
+      <artifactId>oasp4j-test</artifactId>
       <scope>test</scope>
     </dependency>
 
