--- a/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/main/resources/config/env/application.properties
@@ -13,7 +13,7 @@
 # Database
 database.user.login = sa
 database.user.password =
-database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/.sample;INIT=create schema if not exists public
+database.url = jdbc:h2:tcp://localhost:${oasp.db.port}/./.sample;INIT=create schema if not exists public
 database.migration.auto = true
 database.migration.clean = true
 
