--- a/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
+++ b/oasp4j-samples/oasp4j-sample-core/src/test/resources/config/env/application.properties
@@ -12,7 +12,7 @@
 #
 database.user.login = sa
 database.user.password =
-database.url = jdbc:h2:target/.sample;INIT=create schema if not exists public
+database.url = jdbc:h2:./target/.sample;INIT=create schema if not exists public
 database.migration.auto = true
 database.migration.clean = true
 
